--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>NewsAnalyzer</title>
 </head>
 <body>
-  
+  <header class="header">
+    <h1 class="heading">News Analyzer</h1>
+  <header>
 </body>
 </html>
