написал модификатор белого текста в хедере

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
 <body>
   <page>
-    <header class="header">
-      <a href="#home" class="header__project-name">NewsAnalyzer</a>
+    <header class="header header_color_white">
+      <a href="#home" class="header__project-name header__project-name_color_white">NewsAnalyzer</a>
       <ul class="header__menu">
-        <li class="header__item"><a href="#home" class="header__link active">Главная</a></li>
-        <li class="header__item"><a href="#" class="header__link">О проекте</a></li>
+        <li class="header__item"><a href="#home" class="header__link header__link_color_white active">Главная</a></li>
+        <li class="header__item"><a href="#" class="header__link header__link_color_white">О проекте</a></li>
       </ul>
     </header>
     <article class="serch">
