--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <li class="header__item"><a href="#" class="header__link header__link_color_white">О проекте</a></li>
       </ul>
     </header>
-    <article class="serch">
+    <section class="serch">
       <h1 class="serch__title">Что в мире творится?</h1>
       <h2 class="serch__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
         прошедшую неделю.</h2>
@@ -27,7 +27,32 @@
         <input type="text" name="input" class="search__input" placeholder="Введите тему новости">
         <button type="submit" class="search__button" disabled="disabled">Искать</button>
       </form>
+    </section>
+    <article class="about-author">
+      <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="about-author__avatar">
+      <div class="about-author__description">
+        <h1 class="about-author__title">Об авторе</h1>
+        <p class="about-author__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
+          занимаетесь, какими технологиями разработки владеете.</p><br />
+        <p class="about-author__text">
+          Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+          потенциальным заказчикам.</p>
+      </div>
     </article>
+    <footer class="footer">
+      <p class="footer__copyright">&#169; 2020 Кирилл Потапов</p>
+      <ul class="footer__nav">
+        <li class="footer__nav-item"><a href="" class="footer__nav-link">Главная</a></li>
+        <li class="footer__nav-item"><a href="" class="footer__nav-link">О проекте</a></li>
+        <li class="footer__nav-item"><a href="" class="footer__nav-link">Яндекс.Практикум</a></li>
+      </ul>
+      <ul class="footer__social">
+        <li class="footer__social-item"><a href="" class="footer__social-link"><img src="/src/images/gh.svg" alt=""
+              class="footer__social-icon"></a></li>
+        <li class="footer__social-item"><a href="" class="footer__social-link"><img src="/src/images/fb.svg" alt=""
+              class="footer__social-icon"></a></li>
+      </ul>
+    </footer>
   </page>
 </body>
 
