--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,65 @@
         <button type="submit" class="search__button" disabled="disabled">Искать</button>
       </form>
     </section>
+    <section class="serch-result">
+      <div class="serch-result__header">
+        <h1 class="serch-result__title">Результаты поиска</h1>
+        <a href="" class="serch-result__analytics">Посмотреть аналитику &#62;</a>
+      </div>
+      <div class="serch-result__cardlist">
+        <div class="serch-result__card">
+          <img src="<%=require('./images/card01.png')%>" alt="" class="serch-result__image">
+          <p class="serch-result__date">2 августа, 2019</p>
+          <h2 class="serch-result__subtitle">Национальное достояние – парки</h2>
+          <p class="serch-result__news">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+            складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к
+            природе.</p>
+          <p class="serch-result__source">Лента.ру</p>
+        </div>
+        <div class="serch-result__card">
+          <img src="<%=require('./images/card02.png')%>" alt="" class="serch-result__image">
+          <p class="serch-result__date">2 августа, 2019</p>
+          <h2 class="serch-result__subtitle">Лесные огоньки: история одной фотографии</h2>
+          <p class="serch-result__news">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы
+            запечатлеть ускользающую красоту одного из местных чудес природы.</p>
+          <p class="serch-result__source">Медуза</p>
+        </div>
+        <div class="serch-result__card">
+          <img src="<%=require('./images/card03.png')%>" alt="" class="serch-result__image">
+          <p class="serch-result__date">2 августа, 2019</p>
+          <h2 class="serch-result__subtitle">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
+          <p class="serch-result__news">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
+            необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
+          <p class="serch-result__source">Риа</p>
+        </div>
+        <div class="serch-result__card">
+          <img src="<%=require('./images/card04.png')%>" alt="" class="serch-result__image">
+          <p class="serch-result__date">2 августа, 2019</p>
+          <h2 class="serch-result__subtitle">Национальное достояние – парки</h2>
+          <p class="serch-result__news">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+            складываться система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к
+            природе.</p>
+          <p class="serch-result__source">Дзен</p>
+        </div>
+        <div class="serch-result__card">
+          <img src="<%=require('./images/card05.png')%>" alt="" class="serch-result__image">
+          <p class="serch-result__date">2 августа, 2019</p>
+          <h2 class="serch-result__subtitle">Лесные огоньки: история одной фотографии</h2>
+          <p class="serch-result__news">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы
+            запечатлеть ускользающую красоту одного из местных чудес природы.</p>
+          <p class="serch-result__source">Афиша</p>
+        </div>
+        <div class="serch-result__card">
+          <img src="<%=require('./images/card06.png')%>" alt="" class="serch-result__image">
+          <p class="serch-result__date">2 августа, 2019</p>
+          <h2 class="serch-result__subtitle">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
+          <p class="serch-result__news">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
+            необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
+          <p class="serch-result__source">Медиазона</p>
+        </div>
+      </div>
+      <button class="serch-result__button-more">Показать еще</button>
+    </section>
     <article class="about-author">
       <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="about-author__avatar">
       <div class="about-author__description">
@@ -47,10 +106,10 @@
         <li class="footer__nav-item"><a href="" class="footer__nav-link">Яндекс.Практикум</a></li>
       </ul>
       <ul class="footer__social">
-        <li class="footer__social-item"><a href="" class="footer__social-link"><img src="/src/images/gh.svg" alt=""
-              class="footer__social-icon"></a></li>
-        <li class="footer__social-item"><a href="" class="footer__social-link"><img src="/src/images/fb.svg" alt=""
-              class="footer__social-icon"></a></li>
+        <li class="footer__social-item"><a href="" class="footer__social-link"><img
+              src="<%=require('./images/gh.svg')%>" alt="" class="footer__social-icon"></a></li>
+        <li class="footer__social-item"><a href="" class="footer__social-link"><img
+              src="<%=require('./images/fb.svg')%>" alt="" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </page>
