--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,15 @@
         <button type="submit" class="search__button" disabled="disabled">Искать</button>
       </form>
     </section>
+    <section class="nothing-found">
+      <img src="<%=require('./images/not-found_v1.svg')%>" alt="" class="nothing-found__image">
+      <h1 class="nothing-found__title">Ничего не найдено</h1>
+      <h2 class="nothing-found__subtitle">К сожалению по вашему запросу<br /> ничего не найдено.</h2>
+    </section>
+    <section class="serch-news">
+      <img src="<%=require('./images/Ellipse.png')%>" alt="" class="serch-news__loader">
+      <p class="serch-news__text">Идет поиск новостей...</p>
+    </section>
     <section class="serch-result">
       <div class="serch-result__header">
         <h1 class="serch-result__title">Результаты поиска</h1>
