--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,64 @@
 </head>
 
 <body>
+  <header class="header">
+    <a href="#home" class="header__project-name header__project-name_color_black">NewsAnalyzer</a>
+    <ul class="header__menu">
+      <li class="header__item"><a href="index.html" class="header__link header__link_color_black">Главная</a></li>
+      <li class="header__item"><a href="about.html" class="header__link header__link_color_black active">О проекте</a>
+      </li>
+    </ul>
+  </header>
+  <article class="for-clients">
+    <h1 class="for-clients__title">Клиентам</h1>
+    <p class="for-clients__text">Этот сайт — дипломный проект студента Яндекс.Практикума. Его цель — показать, чему
+      научился студент, какими технологиями владеет.</p><br />
 
+    <p class="for-clients__text">Вёрстка сайта выполнена по методологии БЭМ. Это делает сайт гибким и масштабируемым.
+      Кроме того, добавлять новые
+      страницы и функциональность проще и быстрее, чем в проектах, выполненных по другим методологиям. Также сайт проще
+      и дешевле поддерживать.</p><br />
+
+    <p class="for-clients__text">Карточки с новостями приходят с сервера и обрабатываются асинхронно. То есть сайт
+      продолжает работать, пока от
+      сервера приходит ответ. Это повышает удобство использования сервиса.</p><br />
+
+    <p class="for-clients__text">При создании проекта была использована сборка технологией Webpack. Это современный
+      подход к разработке сайтов. Код
+      оптимизируется, а значит, сайт работает быстрее. Также сайт работает в старых браузерах. Даже если посетители —
+      пользователи старых операционных систем, у них не будет проблем с отображением. А значит, потенциальная аудитория
+      возрастает.</p><br />
+    <p class="for-clients__text">Проект был проверен экспертами Яндекс.Практикума. Если вашему бизнесу нужен сайт, мы
+      рекомендуем обратиться к
+      этому студенту.</p>
+    </h1>
+  </article>
+  <article class="about-author">
+    <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="about-author__avatar">
+    <div class="about-author__description">
+      <h1 class="about-author__title">Об авторе</h1>
+      <p class="about-author__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
+        занимаетесь, какими технологиями разработки владеете.</p><br />
+      <p class="about-author__text">
+        Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+        потенциальным заказчикам.</p>
+    </div>
+  </article>
+  <footer class="footer">
+    <p class="footer__copyright">&#169; 2020 Кирилл Потапов</p>
+    <ul class="footer__nav">
+      <li class="footer__nav-item"><a href="index.html" class="footer__nav-link">Главная</a></li>
+      <li class="footer__nav-item"><a href="about.html" class="footer__nav-link">О проекте</a></li>
+      <li class="footer__nav-item"><a href="https://praktikum.yandex.ru/" target="blank"
+          class="footer__nav-link">Яндекс.Практикум</a></li>
+    </ul>
+    <ul class="footer__social">
+      <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/gh.svg')%>"
+            alt="" class="footer__social-icon"></a></li>
+      <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/fb.svg')%>"
+            alt="" class="footer__social-icon"></a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
