--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
 <body>
   <page>
     <header class="header header_color_white">
-      <a href="#home" class="header__project-name header__project-name_color_white">NewsAnalyzer</a>
+      <a href="#home" class="header__project-name">NewsAnalyzer</a>
       <ul class="header__menu">
-        <li class="header__item"><a href="#home" class="header__link header__link_color_white active">Главная</a></li>
-        <li class="header__item"><a href="#" class="header__link header__link_color_white">О проекте</a></li>
+        <li class="header__item"><a href="index.html" class="header__link active">Главная</a></li>
+        <li class="header__item"><a href="about.html" class="header__link">О проекте</a></li>
       </ul>
     </header>
     <section class="serch">
@@ -110,9 +110,10 @@
     <footer class="footer">
       <p class="footer__copyright">&#169; 2020 Кирилл Потапов</p>
       <ul class="footer__nav">
-        <li class="footer__nav-item"><a href="" class="footer__nav-link">Главная</a></li>
-        <li class="footer__nav-item"><a href="" class="footer__nav-link">О проекте</a></li>
-        <li class="footer__nav-item"><a href="" class="footer__nav-link">Яндекс.Практикум</a></li>
+        <li class="footer__nav-item"><a href="index.html" class="footer__nav-link">Главная</a></li>
+        <li class="footer__nav-item"><a href="about.html" class="footer__nav-link">О проекте</a></li>
+        <li class="footer__nav-item"><a href="https://praktikum.yandex.ru/" target="blank"
+            class="footer__nav-link">Яндекс.Практикум</a></li>
       </ul>
       <ul class="footer__social">
         <li class="footer__social-item"><a href="" class="footer__social-link"><img
