--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <section class="serch-result">
       <div class="serch-result__header">
         <h1 class="serch-result__title">Результаты поиска</h1>
-        <a href="" class="serch-result__analytics">Посмотреть аналитику &#62;</a>
+        <a href="statistics.html" class="serch-result__analytics">Посмотреть аналитику &#62;</a>
       </div>
       <div class="serch-result__cardlist">
         <div class="serch-result__card">
