--- a/src/statistics.html
+++ b/src/statistics.html
@@ -23,6 +23,72 @@
     <p class="analytics__result">Новостей за неделю: <b>34 324</b></p>
     <p class="analytics__result">Упоминаний в загаловках: <b>235</b></p>
   </article>
+  <article class="tabel">
+    <h2 class="tabel__title">Аналитика по дням</h2>
+    <div class="tabel__value">
+      <p class="tabel__value-text">дата <br />(август)</p>
+      <p class="tabel__value-text">кол-во упоминаний</p>
+    </div>
+    <img src="<%=require('./images/scale.svg')%>" alt="" class="tabel__scale-line">
+    <div class="tabel__scale">
+      <p class="tabel__scale-index">0</p>
+      <p class="tabel__scale-index">25</p>
+      <p class="tabel__scale-index">50</p>
+      <p class="tabel__scale-index">75</p>
+      <p class="tabel__scale-index">100</p>
+    </div>
+    <div class="tabel__diagram">
+      <div class="tabel__item">
+        <p class="tabel__date">19, пн</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">15</p>
+        </div>
+      </div>
+      <div class="tabel__item">
+        <p class="tabel__date">20, вт</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">18</p>
+        </div>
+      </div>
+      <div class="tabel__item">
+        <p class="tabel__date">21, ср</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">11</p>
+        </div>
+      </div>
+      <div class="tabel__item">
+        <p class="tabel__date">22, чт</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">39</p>
+        </div>
+      </div>
+      <div class="tabel__item">
+        <p class="tabel__date">23, пт</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">45</p>
+        </div>
+      </div>
+      <div class="tabel__item">
+        <p class="tabel__date">24, сб</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">73</p>
+        </div>
+      </div>
+      <div class="tabel__item">
+        <p class="tabel__date">25, вс</p>
+        <div class="tabel__rectangle">
+          <p class="tabel__percent">34</p>
+        </div>
+      </div>
+    </div>
+    <div class="tabel__scale">
+      <p class="tabel__scale-index">0</p>
+      <p class="tabel__scale-index">25</p>
+      <p class="tabel__scale-index">50</p>
+      <p class="tabel__scale-index">75</p>
+      <p class="tabel__scale-index">100</p>
+    </div>
+  </article>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Кирилл Потапов</p>
     <ul class="footer__nav">
