--- a/src/statistics.html
+++ b/src/statistics.html
@@ -40,45 +40,65 @@
     <div class="tabel__diagram">
       <div class="tabel__item">
         <p class="tabel__date">19, пн</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">15</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 15%">
+            <p class="tabel__percent">15</p>
+          </div>
         </div>
+
       </div>
       <div class="tabel__item">
         <p class="tabel__date">20, вт</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">18</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 18%">
+            <p class="tabel__percent">18</p>
+          </div>
         </div>
+
       </div>
       <div class="tabel__item">
         <p class="tabel__date">21, ср</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">11</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 11%">
+            <p class="tabel__percent">11</p>
+          </div>
         </div>
+
       </div>
       <div class="tabel__item">
         <p class="tabel__date">22, чт</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">39</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 39%">
+            <p class="tabel__percent">39</p>
+          </div>
         </div>
       </div>
       <div class="tabel__item">
         <p class="tabel__date">23, пт</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">45</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 45%">
+            <p class="tabel__percent">45</p>
+          </div>
         </div>
+
       </div>
       <div class="tabel__item">
         <p class="tabel__date">24, сб</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">73</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 73%">
+            <p class="tabel__percent">73</p>
+          </div>
         </div>
+
       </div>
       <div class="tabel__item">
         <p class="tabel__date">25, вс</p>
-        <div class="tabel__rectangle">
-          <p class="tabel__percent">34</p>
+        <div class="tabel__fig">
+          <div class="tabel__rectangle" style="width: 34%">
+            <p class="tabel__percent">34</p>
+          </div>
         </div>
+
       </div>
     </div>
     <div class="tabel__scale">
