--- a/src/about.html
+++ b/src/about.html
@@ -128,9 +128,9 @@
           class="footer__nav-link">Яндекс.Практикум</a></li>
     </ul>
     <ul class="footer__social">
-      <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/gh.svg')%>"
+      <li class="footer__social-item"><a href="https://github.com/KPotapov56/NewsAnalyzer" target="blank" class="footer__social-link"><img src="<%=require('./images/gh.svg')%>"
             alt="" class="footer__social-icon"></a></li>
-      <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/fb.svg')%>"
+      <li class="footer__social-item"><a href="https://www.facebook.com/" target="blank" class="footer__social-link"><img src="<%=require('./images/fb.svg')%>"
             alt="" class="footer__social-icon"></a></li>
     </ul>
   </footer>
