--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,12 @@
       </ul>
     </header>
     <article class="serch">
-      <h1 class="serch__title">Что в мире творится?</h1>
-      <h2 class="serch__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
-        прошедшую неделю.</h2>
+      <div class="serch__container">
+        <h1 class="serch__title">Что в мире творится?</h1>
+        <h2 class="serch__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
+          прошедшую неделю.</h2>
+      </div>
+
       <form class="serch__searchbar">
         <input type="text" name="input" class="search__input" placeholder="Введите тему новости">
         <button type="submit" class="search__button">Искать</button>
