--- a/src/index.html
+++ b/src/index.html
@@ -105,8 +105,7 @@
       <div class="about-author__description">
         <h1 class="about-author__title">Об авторе</h1>
         <p class="about-author__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-          занимаетесь, какими технологиями разработки владеете.</p><br />
-        <p class="about-author__text">
+          занимаетесь, какими технологиями разработки владеете.<br />
           Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
           потенциальным заказчикам.</p>
       </div>
