--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <button type="submit" class="search__button">Искать</button>
       </form>
     </article>
-    <!-- <article class="nothing-found">
+    <article class="nothing-found">
       <img src="<%=require('./images/not-found_v1.svg')%>" alt="" class="nothing-found__image">
       <h1 class="nothing-found__title">Ничего не найдено</h1>
       <h2 class="nothing-found__subtitle">К сожалению по вашему запросу<br /> ничего не найдено.</h2>
@@ -39,7 +39,7 @@
     <article class="serch-news">
       <img src="<%=require('./images/Ellipse.png')%>" alt="" class="serch-news__loader">
       <p class="serch-news__text">Идет поиск новостей...</p>
-    </article> -->
+    </article>
     <article class="serch-result">
       <div class="serch-result__header">
         <h1 class="serch-result__title">Результаты поиска</h1>
