--- a/src/about.html
+++ b/src/about.html
@@ -40,26 +40,29 @@
       рекомендуем обратиться к
       этому студенту.</p>
   </article>
-  <!-- <article class="technology">
+  <article class="technology">
     <h2 class="technology__title">Используемые
       технологии</h2>
-    <div class="technology__tech">
-      <h3 class="technology__subtitle">HTML</h3>
-      <img src="<%=require('./images/HTML.svg')%>" alt="" class="technology__logo">
+    <div class="technology__container">
+      <div class="technology__tech">
+        <h3 class="technology__subtitle">HTML</h3>
+        <img src="<%=require('./images/HTML.svg')%>" alt="" class="technology__logo">
+      </div>
+      <div class="technology__tech">
+        <h3 class="technology__subtitle">CSS</h3>
+        <img src="<%=require('./images/CSS.svg')%>" alt="" class="technology__logo">
+      </div>
+      <div class="technology__tech">
+        <h3 class="technology__subtitle">Java Script</h3>
+        <img src="<%=require('./images/js.png')%>" alt="" class="technology__logo">
+      </div>
+      <div class="technology__tech">
+        <h3 class="technology__subtitle">Webpack</h3>
+        <img src="<%=require('./images/webpack.png')%>" alt="" class="technology__logo">
+      </div>
     </div>
-    <div class="technology__tech">
-      <h3 class="technology__subtitle">CSS</h3>
-      <img src="<%=require('./images/CSS.svg')%>" alt="" class="technology__logo">
-    </div>
-    <div class="technology__tech">
-      <h3 class="technology__subtitle">Java Script</h3>
-      <img src="<%=require('./images/js.png')%>" alt="" class="technology__logo">
-    </div>
-    <div class="technology__tech">
-      <h3 class="technology__subtitle">Webpack</h3>
-      <img src="<%=require('./images/webpack.png')%>" alt="" class="technology__logo">
-    </div>
-  </article> -->
+
+  </article>
   <article class="about-author">
     <div class="about-author__avatar-container">
       <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="about-author__avatar"></div>
@@ -72,7 +75,7 @@
         потенциальным заказчикам.</p>
     </div>
   </article>
-  <!-- <article class="history">
+  <article class="history">
     <img src="<%=require('./images/slider-control-left.svg')%>" alt="" class="history__slider-control-left">
     <img src="<%=require('./images/slider-control-right.svg')%>" alt="" class="history__slider-control-right">
     <div class="history__header">
@@ -121,7 +124,7 @@
       </div>
     </div>
     <img src="<%=require('./images/page-control.svg')%>" alt="" class="history__page-control">
-  </article> -->
+  </article>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Кирилл Потапов</p>
     <ul class="footer__nav">
