--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <li class="header__item"><a href="about.html" class="header__link">О проекте</a></li>
     </ul>
   </header>
-  <article class="serch">
+  <!-- <article class="serch">
     <div class="serch__container">
       <h1 class="serch__title">Что в мире творится?</h1>
       <h2 class="serch__subtitle">Введите в поиске любую тему и узнайте, насколько популярной она была в новостях за
@@ -29,7 +29,7 @@
       <input type="text" name="input" class="search__input" placeholder="Введите тему новости">
       <button type="submit" class="search__button">Искать</button>
     </form>
-  </article>
+  </article> -->
   <article class="nothing-found">
     <img src="<%=require('./images/not-found_v1.svg')%>" alt="" class="nothing-found__image">
     <h1 class="nothing-found__title">Ничего не найдено</h1>
