--- a/src/about.html
+++ b/src/about.html
@@ -124,6 +124,7 @@
       </div>
     </div>
     <img src="<%=require('./images/page-control.svg')%>" alt="" class="history__page-control">
+    <a href="https://github.com/KPotapov56/NewsAnalyzer" target="blank" class="history__link-to-github">Открыть в GitHub</a>
   </article>
   <footer class="footer">
     <p class="footer__copyright">&#169; 2020 Кирилл Потапов</p>
