--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <form class="serch__searchbar">
-      <input type="text" name="input" class="search__input" placeholder="Введите тему новости">
+      <input type="text" name="input" class="search__input" placeholder="Введите тему новости" required="required">
       <button type="submit" class="search__button">Искать</button>
     </form>
   </article>
