--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
     </form>
   </article>
   <article class="nothing-found">
-    <img src="<%=require('./images/not-found_v1.svg')%>" alt="" class="nothing-found__image">
+    <img src="<%=require('./images/not-found_v1.svg')%>" alt="ничего не найдено" class="nothing-found__image">
     <h1 class="nothing-found__title">Ничего не найдено</h1>
     <h2 class="nothing-found__subtitle">К сожалению по вашему запросу<br /> ничего не найдено.</h2>
   </article>
   <article class="serch-news">
-    <img src="<%=require('./images/Ellipse.png')%>" alt="" class="serch-news__loader">
+    <img src="<%=require('./images/Ellipse.png')%>" alt="идет поиск..." class="serch-news__loader">
     <p class="serch-news__text">Идет поиск новостей...</p>
   </article>
   <article class="serch-result">
@@ -46,7 +46,7 @@
     </div>
     <div class="serch-result__cardlist">
       <div class="serch-result__card">
-        <img src="<%=require('./images/card01.png')%>" alt="" class="serch-result__image">
+        <img src="<%=require('./images/card01.png')%>" alt="Национальное достояние – парки" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">Национальное достояние – парки</h2>
         <p class="serch-result__news">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
@@ -55,7 +55,7 @@
         <p class="serch-result__source">Лента.ру</p>
       </div>
       <div class="serch-result__card">
-        <img src="<%=require('./images/card02.png')%>" alt="" class="serch-result__image">
+        <img src="<%=require('./images/card02.png')%>" alt="Лесные огоньки: история одной фотографии" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">Лесные огоньки: история одной фотографии</h2>
         <p class="serch-result__news">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы
@@ -63,7 +63,7 @@
         <p class="serch-result__source">Медуза</p>
       </div>
       <div class="serch-result__card">
-        <img src="<%=require('./images/card03.png')%>" alt="" class="serch-result__image">
+        <img src="<%=require('./images/card03.png')%>" alt="Первозданная тайга" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
         <p class="serch-result__news">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
@@ -71,7 +71,7 @@
         <p class="serch-result__source">Риа</p>
       </div>
       <div class="serch-result__card">
-        <img src="<%=require('./images/card04.png')%>" alt="" class="serch-result__image">
+        <img src="<%=require('./images/card04.png')%>" alt="Национальное достояние – парки" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">Национальное достояние – парки</h2>
         <p class="serch-result__news">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
@@ -80,7 +80,7 @@
         <p class="serch-result__source">Дзен</p>
       </div>
       <div class="serch-result__card">
-        <img src="<%=require('./images/card05.png')%>" alt="" class="serch-result__image">
+        <img src="<%=require('./images/card05.png')%>" alt="Лесные огоньки: история одной фотографии" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">Лесные огоньки: история одной фотографии</h2>
         <p class="serch-result__news">Фотограф отвлеклась от освещения суровой политической реальности Мексики, чтобы
@@ -88,7 +88,7 @@
         <p class="serch-result__source">Афиша</p>
       </div>
       <div class="serch-result__card">
-        <img src="<%=require('./images/card06.png')%>" alt="" class="serch-result__image">
+        <img src="<%=require('./images/card06.png')%>" alt="Первозданная тайга" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
         <p class="serch-result__news">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
@@ -119,9 +119,9 @@
     </ul>
     <ul class="footer__social">
       <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/gh.svg')%>"
-            alt="" class="footer__social-icon"></a></li>
+            alt="GitHub" class="footer__social-icon"></a></li>
       <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/fb.svg')%>"
-            alt="" class="footer__social-icon"></a></li>
+            alt="Facebook" class="footer__social-icon"></a></li>
     </ul>
   </footer>
 </body>
