--- a/src/about.html
+++ b/src/about.html
@@ -46,19 +46,19 @@
     <div class="technology__container">
       <div class="technology__tech">
         <h3 class="technology__subtitle">HTML</h3>
-        <img src="<%=require('./images/HTML.svg')%>" alt="" class="technology__logo">
+        <img src="<%=require('./images/HTML.svg')%>" alt="HTML" class="technology__logo">
       </div>
       <div class="technology__tech">
         <h3 class="technology__subtitle">CSS</h3>
-        <img src="<%=require('./images/CSS.svg')%>" alt="" class="technology__logo">
+        <img src="<%=require('./images/CSS.svg')%>" alt="CSS" class="technology__logo">
       </div>
       <div class="technology__tech">
         <h3 class="technology__subtitle">Java Script</h3>
-        <img src="<%=require('./images/js.png')%>" alt="" class="technology__logo">
+        <img src="<%=require('./images/js.png')%>" alt="JavaScript" class="technology__logo">
       </div>
       <div class="technology__tech">
         <h3 class="technology__subtitle">Webpack</h3>
-        <img src="<%=require('./images/webpack.png')%>" alt="" class="technology__logo">
+        <img src="<%=require('./images/webpack.png')%>" alt="Webpack" class="technology__logo">
       </div>
     </div>
 
@@ -76,8 +76,8 @@
     </div>
   </article>
   <article class="history">
-    <img src="<%=require('./images/slider-control-left.svg')%>" alt="" class="history__slider-control-left">
-    <img src="<%=require('./images/slider-control-right.svg')%>" alt="" class="history__slider-control-right">
+    <img src="<%=require('./images/slider-control-left.svg')%>" alt="листать влево" class="history__slider-control-left">
+    <img src="<%=require('./images/slider-control-right.svg')%>" alt="листсать вправо" class="history__slider-control-right">
     <div class="history__header">
       <h2 class="history__title">История коммитов из GitHub</h2>
       <a href="https://github.com/KPotapov56/NewsAnalyzer" target="blank" class="history__link">Открыть в Github
@@ -87,7 +87,7 @@
       <div class="history__card">
         <p class="history__date">14 августа, 2019</p>
         <div class="history__author">
-          <img src="<%=require('./images/a-dolinin.png')%>" alt="" class="history__avatar">
+          <img src="<%=require('./images/a-dolinin.png')%>" alt="Антон Долинин" class="history__avatar">
           <div class="history__author-info">
             <p class="history__author-name">Антон Долинин</p>
             <p class="history__author-mail">anton@yandex.ru</p>
@@ -99,7 +99,7 @@
       <div class="history__card">
         <p class="history__date">14 августа, 2019</p>
         <div class="history__author">
-          <img src="<%=require('./images/m-fedorova.png')%>" alt="" class="history__avatar">
+          <img src="<%=require('./images/m-fedorova.png')%>" alt="Мария Фёдорова" class="history__avatar">
           <div class="history__author-info">
             <p class="history__author-name">Мария Фёдорова</p>
             <p class="history__author-mail">mariiifed@yandex.ru</p>
@@ -112,7 +112,7 @@
       <div class="history__card">
         <p class="history__date">14 августа, 2019</p>
         <div class="history__author">
-          <img src="<%=require('./images/i-ivanova.png')%>" alt="" class="history__avatar">
+          <img src="<%=require('./images/i-ivanova.png')%>" alt="Инга Иванова" class="history__avatar">
           <div class="history__author-info">
             <p class="history__author-name">Инга Иванова</p>
             <p class="history__author-mail">ingaiva@yandex.ru</p>
@@ -123,7 +123,7 @@
           output depending on what you type in the abb...</p>
       </div>
     </div>
-    <img src="<%=require('./images/page-control.svg')%>" alt="" class="history__page-control">
+    <img src="<%=require('./images/page-control.svg')%>" alt="индикатор страницы" class="history__page-control">
     <a href="https://github.com/KPotapov56/NewsAnalyzer" target="blank" class="history__link-to-github">Открыть в GitHub</a>
   </article>
   <footer class="footer">
@@ -136,10 +136,10 @@
     </ul>
     <ul class="footer__social">
       <li class="footer__social-item"><a href="https://github.com/KPotapov56/NewsAnalyzer" target="blank"
-          class="footer__social-link"><img src="<%=require('./images/gh.svg')%>" alt="" class="footer__social-icon"></a>
+          class="footer__social-link"><img src="<%=require('./images/gh.svg')%>" alt="GitHub" class="footer__social-icon"></a>
       </li>
       <li class="footer__social-item"><a href="https://www.facebook.com/" target="blank"
-          class="footer__social-link"><img src="<%=require('./images/fb.svg')%>" alt="" class="footer__social-icon"></a>
+          class="footer__social-link"><img src="<%=require('./images/fb.svg')%>" alt="Facebook" class="footer__social-icon"></a>
       </li>
     </ul>
   </footer>
