--- a/src/statistics.html
+++ b/src/statistics.html
@@ -29,7 +29,7 @@
       <p class="tabel__value-text">дата <br />(август)</p>
       <p class="tabel__value-text">кол-во упоминаний</p>
     </div>
-    <img src="<%=require('./images/scale.svg')%>" alt="" class="tabel__scale-line">
+    <img src="<%=require('./images/scale.svg')%>" alt="шкала" class="tabel__scale-line">
     <div class="tabel__scale">
       <p class="tabel__scale-index">0</p>
       <p class="tabel__scale-index">25</p>
@@ -119,9 +119,9 @@
     </ul>
     <ul class="footer__social">
       <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/gh.svg')%>"
-            alt="" class="footer__social-icon"></a></li>
+            alt="GitHub" class="footer__social-icon"></a></li>
       <li class="footer__social-item"><a href="" class="footer__social-link"><img src="<%=require('./images/fb.svg')%>"
-            alt="" class="footer__social-icon"></a></li>
+            alt="Facebook" class="footer__social-icon"></a></li>
     </ul>
   </footer>
 </body>
