--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       <button type="submit" class="search__button">Искать</button>
     </form>
   </article>
-  <article class="nothing-found">
+  <!-- <article class="nothing-found">
     <img src="<%=require('./images/not-found_v1.svg')%>" alt="ничего не найдено" class="nothing-found__image">
     <h1 class="nothing-found__title">Ничего не найдено</h1>
     <h2 class="nothing-found__subtitle">К сожалению по вашему запросу<br /> ничего не найдено.</h2>
@@ -97,7 +97,7 @@
       </div>
     </div>
     <button type="button" class="serch-result__button-more">Показать еще</button>
-  </article>
+  </article> -->
   <article class="about-author">
     <div class="about-author__avatar-container">
       <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="about-author__avatar"></div>
