--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Сервис для анализа происходящих в мире событий">
   <meta name="autor" content="Кирилл Потапов">
   <title>NewsAnalyzer</title>
-  <link rel="shortcut icon" href="../src/images/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
 </head>
 
 <body>
