--- a/src/statistics.html
+++ b/src/statistics.html
@@ -21,7 +21,7 @@
     <p class="analytics__current-page"><a href="index.html" class="analytics__link-to-main">Главная </a>/ Аналитика</p>
     <h1 class="analytics__title">Вы спросили: «Путешествия»</h1>
     <p class="analytics__result">Новостей за неделю: <b>34 324</b></p>
-    <p class="analytics__result">Упоминаний в загаловках: <b>235</b></p>
+    <p class="analytics__result">Упоминаний в заголовках: <b>235</b></p>
   </article>
   <article class="tabel">
     <h2 class="tabel__title">Аналитика по дням</h2>
