--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,13 @@
     <img src="<%=require('./images/Ellipse.png')%>" alt="идет поиск..." class="serch-news__loader">
     <p class="serch-news__text">Идет поиск новостей...</p>
   </article>
-  <!-- <article class="serch-result">
+  <article class="serch-result hiden">
     <div class="serch-result__header">
       <h1 class="serch-result__title">Результаты поиска</h1>
       <a href="statistics.html" class="serch-result__analytics">Посмотреть аналитику &#62;</a>
     </div>
     <div class="serch-result__cardlist">
-      <div class="serch-result__card">
+      <!-- <div class="serch-result__card">
         <img src="<%=require('./images/card01.png')%>" alt="Национальное достояние – парки" class="serch-result__image">
         <p class="serch-result__date">2 августа, 2019</p>
         <h2 class="serch-result__subtitle">Национальное достояние – парки</h2>
@@ -95,11 +95,11 @@
         <h2 class="serch-result__subtitle">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</h2>
         <p class="serch-result__news">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
           необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...</p>
-        <p class="serch-result__source">Медиазона</p>
+        <p class="serch-result__source">Медиазона</p> -->
       </div>
     </div>
     <button type="button" class="serch-result__button-more">Показать еще</button>
-  </article> -->
+  </article>
   <article class="about-author">
     <div class="about-author__avatar-container">
       <img src="<%=require('./images/avatar.png')%>" alt="аватар" class="about-author__avatar"></div>
